<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fontFamily="@font/sfuidisplayregular"
        android:gravity="right|bottom"
        android:paddingRight="20dp"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="80sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_lightgrey"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btnAC"
            android:textSize="34sp" />

        <Button
            android:id="@+id/buttonMaisMenos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_lightgrey"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btnMaisMenos"
            android:textSize="34sp" />

        <Button
            android:id="@+id/buttonPercentual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_lightgrey"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btnPorcentagem"
            android:textSize="34sp" />

        <Button
            android:id="@+id/buttonDivisao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_orange"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btnDivisao"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btn7"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btn8"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/sfuidisplayregular"

            android:text="@string/btn9"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/buttonMultiplicacao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_orange"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btnMultiplicacao"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btn4"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btn5"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btn6"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/buttonSubtracao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_orange"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btnSubtracao"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btn1"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btn2"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btn3"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/buttonAdicao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_orange"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btnAdicao"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/sfuidisplayregular"
            android:gravity="left|center_vertical"
            android:paddingLeft="38dp"
            android:text="@string/btn0"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/buttonVirgula"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1.5"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btnVirgula"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/buttonIgual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1.5"
            android:background="@drawable/button_orange"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/btnIgual"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>
</LinearLayout>

